[FIX] Advanced filters date widget too big
bzr revid: fme@openerp.com-20111215125005-43fat0tdjjs2vry9

--- a/addons/web/static/src/css/base.css
+++ b/addons/web/static/src/css/base.css
@@ -1196,9 +1196,8 @@ label.error {
 }
 .openerp .oe_datepicker_root {
     display: inline-block;
-    width: 100%;
 }
-.openerp .oe_forms.oe_frame .oe_datepicker_root {
+.openerp .oe_form_frame_cell .oe_datepicker_root {
     width: 100%;
 }
 .openerp .oe_input_icon_disabled {
